# stochastic-circuit-breaker

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: detection_speed.py
examples/: basic_usage.py  llm_integration.py  multi_agent.py
src/stochastic_circuit_breaker/: __init__.py  breaker.py  detectors.py  quality.py  registry.py  types.py
tests/: test_breaker.py  test_detectors.py  test_registry.py
